# codeshield-app

./: .releaserc  .releaserc.yaml  CHANGELOG.md  Dockerfile  Makefile  pyproject.toml  run.sh
.github/workflows/: build.yaml
codeshieldapp/: __version__.py  main.py
codeshieldapp/service/: bash_scanner.py  config.py
config/local/: config.yaml
config/prod/: config.yaml
k8s/: deployment.yaml  loadbalancer.yaml
k8s/staging/: deployment.yaml  loadbalancer.yaml
static/: index.html
