[tool.poetry]
name = "codeshield-app"
version = "0.0.0.dev1"
description = "A FastAPI-based application for text processing and classification."
authors = ["Robin Frehner <robin.frehner@proton.me>"]
license = "MIT"
packages = [{ include = "codeshieldapp" }]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440-pre"
bump = true

[tool.poetry-dynamic-versioning.files."codeshieldapp.__version__.py"]
persistent-substitution = true
initial-content = """
# These version placeholders will be substituted
__version__ = "0.0.0"
__version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
